// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RateUser container ProfessorForm should render correctly 1`] = `
.jwltLt {
  background-color: #369947 !important;
  border-color: #369947 !important;
  color: #F1F1F5 !important;
  opacity: .65;
  -webkit-text-transform: uppercase;
  text-transform: uppercase;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  width: 100%;
}

.cYrpQX {
  margin-top: 25px !important;
}

.fYkctb {
  margin-left: 15px;
}

.fYkctb input {
  color: black;
}

.bqyzQp {
  position: relative;
}

.eYQGSB {
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  margin: 0;
  cursor: pointer;
}

.djmajI {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  border: 2px solid black;
  border-radius: 50%;
}

.djmajI label {
  font-weigth: 600;
  font-size: 17.5px;
  border-color: black;
}

.fbgGmL {
  position: relative;
  height: 25px;
  width: 25px;
  margin: 5px;
  -webkit-transition: -webkit-transform 300ms ease;
  -webkit-transition: transform 300ms ease;
  transition: transform 300ms ease;
  -webkit-transform: ;
  -ms-transform: ;
  transform: ;
}

.cNVoic {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.dAvTTg .header {
  -webkit-text-align: center;
  text-align: center;
  font-weight: 500;
  -webkit-text-transform: uppercase;
  text-transform: uppercase;
  margin-bottom: 5px;
}

.dAvTTg .footer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
  margin-top: 7.5px;
  -webkit-text-transform: uppercase;
  text-transform: uppercase;
  font-size: 11.5px;
  color: #646464;
}

.dAvTTg .footer > div:nth-of-type(1) > .icon {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.enMCSC {
  margin-bottom: 25px !important;
}

<form
  onSubmit={[Function]}
>
  <div>
    <div
      className="content-block-title sc-bwzfXH cYrpQX"
    >
      Professor Information
    </div>
    <div
      className="list-block inset sc-kAzzGY enMCSC"
    >
      <ul>
        <div
          className="sc-ifAKCX item-content bqyzQp"
        >
          <div
            className="item-media"
          >
            <i
              className="material-icons icon"
            >
              account_circle
            </i>
          </div>
          <div
            className="item-input sc-htpNat fYkctb"
          >
            <input
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="John Doe"
              type="text"
              value=""
            />
          </div>
        </div>
      </ul>
    </div>
  </div>
  <div>
    <div
      className="content-block-title sc-bwzfXH cYrpQX"
    >
      School Information
    </div>
    <div
      className="list-block inset sc-kAzzGY enMCSC"
    >
      <ul>
        <li>
          <a
            className="item-link smart-select"
            data-searchbar="true"
            data-searchbar-placeholder="Search for a school..."
          >
            <select
              multiple={false}
              name="school"
              onBlur={[Function]}
              onChange={[Function]}
              value="[object Object]"
            >
              <option
                data-display-as="NJIT"
                value="bruHy"
              >
                New Jersey Institute of Technology, Newark
              </option>
              <option
                data-display-as="RU"
                value="5y7fh"
              >
                Rutgers University, New Brunswick
              </option>
            </select>
            <div
              className="item-content"
            >
              <div
                className="item-inner"
              >
                <div
                  className="item-title"
                >
                  School
                </div>
                <div
                  className="item-after"
                />
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            className="item-link smart-select"
            data-searchbar="true"
            data-searchbar-placeholder="Search for a major..."
          >
            <select
              multiple={false}
              name="major"
              onBlur={[Function]}
              onChange={[Function]}
              value="[object Object]"
            >
              <option
                data-display-as="CS"
                value="hvdMFjM"
              >
                Computer Science
              </option>
              <option
                data-display-as="IS"
                value="e2LejDg"
              >
                Information Systems
              </option>
            </select>
            <div
              className="item-content"
            >
              <div
                className="item-inner"
              >
                <div
                  className="item-title"
                >
                  Major
                </div>
                <div
                  className="item-after"
                />
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-content sc-jzJRlG dAvTTg"
    >
      <div
        className="card-content-inner"
      >
        <div
          className="header"
        >
          Attends Group Meetings
        </div>
        <div
          className="sc-fjdhpX cNVoic"
        >
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#D91518"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="1_DRFJY9jd"
              name="DRFJY9jd"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={1}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#D91518"
            >
              <label
                htmlFor="1_DRFJY9jd"
              >
                1
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#E6665B"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="2_DRFJY9jd"
              name="DRFJY9jd"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={2}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#E6665B"
            >
              <label
                htmlFor="2_DRFJY9jd"
              >
                2
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#DEB21C"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="3_DRFJY9jd"
              name="DRFJY9jd"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={3}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#DEB21C"
            >
              <label
                htmlFor="3_DRFJY9jd"
              >
                3
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#BCC75E"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="4_DRFJY9jd"
              name="DRFJY9jd"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={4}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#BCC75E"
            >
              <label
                htmlFor="4_DRFJY9jd"
              >
                4
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#A1BA37"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="5_DRFJY9jd"
              name="DRFJY9jd"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={5}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#A1BA37"
            >
              <label
                htmlFor="5_DRFJY9jd"
              >
                5
              </label>
            </div>
          </div>
        </div>
        <div
          className="footer"
        >
          <div>
            <i
              className="material-icons icon"
            >
              trending_flat
            </i>
             Awful
          </div>
          <div>
            Great 
            <i
              className="material-icons icon"
            >
              trending_flat
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-content sc-jzJRlG dAvTTg"
    >
      <div
        className="card-content-inner"
      >
        <div
          className="header"
        >
          Contributes to Discussions
        </div>
        <div
          className="sc-fjdhpX cNVoic"
        >
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#D91518"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="1_j84WAR77"
              name="j84WAR77"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={1}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#D91518"
            >
              <label
                htmlFor="1_j84WAR77"
              >
                1
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#E6665B"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="2_j84WAR77"
              name="j84WAR77"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={2}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#E6665B"
            >
              <label
                htmlFor="2_j84WAR77"
              >
                2
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#DEB21C"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="3_j84WAR77"
              name="j84WAR77"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={3}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#DEB21C"
            >
              <label
                htmlFor="3_j84WAR77"
              >
                3
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#BCC75E"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="4_j84WAR77"
              name="j84WAR77"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={4}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#BCC75E"
            >
              <label
                htmlFor="4_j84WAR77"
              >
                4
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#A1BA37"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="5_j84WAR77"
              name="j84WAR77"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={5}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#A1BA37"
            >
              <label
                htmlFor="5_j84WAR77"
              >
                5
              </label>
            </div>
          </div>
        </div>
        <div
          className="footer"
        >
          <div>
            <i
              className="material-icons icon"
            >
              trending_flat
            </i>
             Awful
          </div>
          <div>
            Great 
            <i
              className="material-icons icon"
            >
              trending_flat
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="content-block  "
  >
    <button
      className="button button-big sc-bdVaJa jwltLt"
      disabled={true}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`RateUser container StudentForm should render correctly 1`] = `
.dYzSUq {
  background-color: #369947 !important;
  border-color: #369947 !important;
  color: #F1F1F5 !important;
  opacity: 1;
  -webkit-text-transform: uppercase;
  text-transform: uppercase;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  width: 100%;
}

.cYrpQX {
  margin-top: 25px !important;
}

.fYkctb {
  margin-left: 15px;
}

.fYkctb input {
  color: black;
}

.bqyzQp {
  position: relative;
}

.kmibPL {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
}

.kaKmBo {
  -webkit-text-align: right;
  text-align: right;
  width: auto !important;
}

.irilpd {
  position: relative;
}

.eYQGSB {
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  margin: 0;
  cursor: pointer;
}

.djmajI {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  border: 2px solid black;
  border-radius: 50%;
}

.djmajI label {
  font-weigth: 600;
  font-size: 17.5px;
  border-color: black;
}

.fbgGmL {
  position: relative;
  height: 25px;
  width: 25px;
  margin: 5px;
  -webkit-transition: -webkit-transform 300ms ease;
  -webkit-transition: transform 300ms ease;
  transition: transform 300ms ease;
  -webkit-transform: ;
  -ms-transform: ;
  transform: ;
}

.cNVoic {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.dAvTTg .header {
  -webkit-text-align: center;
  text-align: center;
  font-weight: 500;
  -webkit-text-transform: uppercase;
  text-transform: uppercase;
  margin-bottom: 5px;
}

.dAvTTg .footer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
  margin-top: 7.5px;
  -webkit-text-transform: uppercase;
  text-transform: uppercase;
  font-size: 11.5px;
  color: #646464;
}

.dAvTTg .footer > div:nth-of-type(1) > .icon {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.enMCSC {
  margin-bottom: 25px !important;
}

.kqlxdJ {
  margin-bottom: 5px !important;
}

<form
  onSubmit={[Function]}
>
  <div>
    <div
      className="content-block-title sc-bwzfXH cYrpQX"
    >
      Student Information
    </div>
    <div
      className="list-block inset sc-kAzzGY enMCSC"
    >
      <ul>
        <div
          className="sc-ifAKCX item-content bqyzQp"
        >
          <div
            className="item-media"
          >
            <i
              className="material-icons icon"
            >
              account_circle
            </i>
          </div>
          <div
            className="item-input sc-htpNat fYkctb"
          >
            <input
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="John Doe"
              type="text"
              value={undefined}
            />
          </div>
        </div>
        <div
          className="sc-ifAKCX item-content bqyzQp"
        >
          <div
            className="item-media"
          >
            <i
              className="material-icons icon"
            >
              email
            </i>
          </div>
          <div
            className="item-input sc-htpNat fYkctb"
          >
            <input
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="john@school.edu"
              type="email"
              value=""
            />
          </div>
        </div>
      </ul>
    </div>
  </div>
  <div>
    <div
      className="content-block-title sc-bwzfXH cYrpQX"
    >
      School Information
    </div>
    <div
      className="list-block inset sc-kAzzGY enMCSC"
    >
      <ul>
        <li>
          <a
            className="item-link smart-select"
            data-searchbar="true"
            data-searchbar-placeholder="Search for a school..."
          >
            <select
              multiple={false}
              name="school"
              onBlur={undefined}
              onChange={[Function]}
              value="bruHy"
            >
              <option
                data-display-as="NJIT"
                value="bruHy"
              >
                New Jersey Institute of Technology, Newark
              </option>
              <option
                data-display-as="RU"
                value="5y7fh"
              >
                Rutgers University, New Brunswick
              </option>
            </select>
            <div
              className="item-content"
            >
              <div
                className="item-inner"
              >
                <div
                  className="item-title"
                >
                  School
                </div>
                <div
                  className="item-after"
                />
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            className="item-link smart-select"
            data-searchbar="true"
            data-searchbar-placeholder="Search for a major..."
          >
            <select
              multiple={false}
              name="major"
              onBlur={undefined}
              onChange={[Function]}
              value="hvdMFjM"
            >
              <option
                data-display-as="CS"
                value="hvdMFjM"
              >
                Computer Science
              </option>
              <option
                data-display-as="IS"
                value="e2LejDg"
              >
                Information Systems
              </option>
            </select>
            <div
              className="item-content"
            >
              <div
                className="item-inner"
              >
                <div
                  className="item-title"
                >
                  Major
                </div>
                <div
                  className="item-after"
                />
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-content sc-jzJRlG dAvTTg"
    >
      <div
        className="card-content-inner"
      >
        <div
          className="header"
        >
          Attends Group Meetings
        </div>
        <div
          className="sc-fjdhpX cNVoic"
        >
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#D91518"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="1_DRFJY9jd"
              name="DRFJY9jd"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={1}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#D91518"
            >
              <label
                htmlFor="1_DRFJY9jd"
              >
                1
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#E6665B"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="2_DRFJY9jd"
              name="DRFJY9jd"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={2}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#E6665B"
            >
              <label
                htmlFor="2_DRFJY9jd"
              >
                2
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#DEB21C"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="3_DRFJY9jd"
              name="DRFJY9jd"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={3}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#DEB21C"
            >
              <label
                htmlFor="3_DRFJY9jd"
              >
                3
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#BCC75E"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="4_DRFJY9jd"
              name="DRFJY9jd"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={4}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#BCC75E"
            >
              <label
                htmlFor="4_DRFJY9jd"
              >
                4
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#A1BA37"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="5_DRFJY9jd"
              name="DRFJY9jd"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={5}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#A1BA37"
            >
              <label
                htmlFor="5_DRFJY9jd"
              >
                5
              </label>
            </div>
          </div>
        </div>
        <div
          className="footer"
        >
          <div>
            <i
              className="material-icons icon"
            >
              trending_flat
            </i>
             Awful
          </div>
          <div>
            Great 
            <i
              className="material-icons icon"
            >
              trending_flat
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-content sc-jzJRlG dAvTTg"
    >
      <div
        className="card-content-inner"
      >
        <div
          className="header"
        >
          Contributes to Discussions
        </div>
        <div
          className="sc-fjdhpX cNVoic"
        >
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#D91518"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="1_j84WAR77"
              name="j84WAR77"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={1}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#D91518"
            >
              <label
                htmlFor="1_j84WAR77"
              >
                1
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#E6665B"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="2_j84WAR77"
              name="j84WAR77"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={2}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#E6665B"
            >
              <label
                htmlFor="2_j84WAR77"
              >
                2
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#DEB21C"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="3_j84WAR77"
              name="j84WAR77"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={3}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#DEB21C"
            >
              <label
                htmlFor="3_j84WAR77"
              >
                3
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#BCC75E"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="4_j84WAR77"
              name="j84WAR77"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={4}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#BCC75E"
            >
              <label
                htmlFor="4_j84WAR77"
              >
                4
              </label>
            </div>
          </div>
          <div
            checked={false}
            className="sc-jTzLTM fbgGmL"
            color="#A1BA37"
          >
            <input
              checked={false}
              className="sc-gqjmRU eYQGSB"
              id="5_j84WAR77"
              name="j84WAR77"
              onBlur={[Function]}
              onChange={[Function]}
              type="radio"
              value={5}
            />
            <div
              checked={false}
              className="sc-VigVT djmajI"
              color="#A1BA37"
            >
              <label
                htmlFor="5_j84WAR77"
              >
                5
              </label>
            </div>
          </div>
        </div>
        <div
          className="footer"
        >
          <div>
            <i
              className="material-icons icon"
            >
              trending_flat
            </i>
             Awful
          </div>
          <div>
            Great 
            <i
              className="material-icons icon"
            >
              trending_flat
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="content-block-title sc-bwzfXH cYrpQX"
    >
      Additional Information
    </div>
    <div
      className="list-block inset sc-kAzzGY kqlxdJ"
    >
      <ul>
        <li
          className="align-top"
        >
          <div
            className="sc-gZMcBi item-content irilpd"
          >
            <div
              className="item-media"
            >
              <i
                className="material-icons icon"
              >
                comment
              </i>
            </div>
            <div
              className="item-inner"
            >
              <div
                className="item-input"
              >
                <textarea
                  name="comment"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Your comment here..."
                />
              </div>
            </div>
          </div>
        </li>
        <div
          className="item-content"
        >
          <div
            className="item-media"
          >
            <i
              className="material-icons icon"
            >
              done
            </i>
          </div>
          <div
            className="item-inner"
          >
            <div
              className="sc-htoDjs item-title label kmibPL"
            >
              Recommend
            </div>
            <div
              className="sc-dnqmqq item-input kaKmBo"
            >
              <label
                className="label-switch"
              >
                <input
                  name="recommend"
                  onChange={[Function]}
                  type="checkbox"
                />
                <div
                  className="checkbox"
                />
              </label>
            </div>
          </div>
        </div>
      </ul>
    </div>
  </div>
  <div
    className="content-block  "
  >
    <button
      className="button button-big sc-bdVaJa dYzSUq"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;
